--- a/src/components/css/Header.module.css
+++ b/src/components/css/Header.module.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
   align-items: center;
   padding: .5rem 0;
+  position: fixed;
+  top:0;
+  width: 100%;
+  background: #fff;
 }
 
 .logo {
@@ -21,7 +25,7 @@
 }
 
 .logo button:hover {
-  background-color: rgba(0,0,0,0.1);
+  background-color: rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   padding: .5rem;
   cursor: pointer;
